// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Api sends information through renders info when API call succeeds 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <h1>
          Perusall API User Return:
        </h1>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="display: flex; flex-direction: column; align-items: center;"
    >
      <h1>
        Perusall API User Return:
      </h1>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Jest Snapshot testing suite Matches AssignmentAnnotationsPage Snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <div>
          <label>
             Enter the course id:
            <input
              placeholder="Course Id Here"
              type="text"
            />
          </label>
          <label>
             Enter the assignment id:
            <input
              placeholder="Assignment Id Here"
              type="text"
            />
          </label>
          <button>
            Search Assignment
          </button>
        </div>
        <h1
          style="border-bottom: 1px solid black; display: inline-block;"
        >
          Assignment Annotations:
        </h1>
        <label>
          No assignments to display
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="display: flex; flex-direction: column; align-items: center;"
    >
      <div>
        <label>
           Enter the course id:
          <input
            placeholder="Course Id Here"
            type="text"
          />
        </label>
        <label>
           Enter the assignment id:
          <input
            placeholder="Assignment Id Here"
            type="text"
          />
        </label>
        <button>
          Search Assignment
        </button>
      </div>
      <h1
        style="border-bottom: 1px solid black; display: inline-block;"
      >
        Assignment Annotations:
      </h1>
      <label>
        No assignments to display
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Jest Snapshot testing suite Matches AssignmentGradesPage Snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <div>
          <label>
             Enter the course id:
            <input
              placeholder="Course Id Here"
              type="text"
            />
          </label>
          <label>
             Enter the assignment id:
            <input
              placeholder="Assignment Id Here"
              type="text"
            />
          </label>
          <button>
            Search Assignment
          </button>
        </div>
        <h1
          style="border-bottom: 1px solid black; display: inline-block;"
        >
          Assignment Grades:
        </h1>
        <label>
          No assignments to display
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="display: flex; flex-direction: column; align-items: center;"
    >
      <div>
        <label>
           Enter the course id:
          <input
            placeholder="Course Id Here"
            type="text"
          />
        </label>
        <label>
           Enter the assignment id:
          <input
            placeholder="Assignment Id Here"
            type="text"
          />
        </label>
        <button>
          Search Assignment
        </button>
      </div>
      <h1
        style="border-bottom: 1px solid black; display: inline-block;"
      >
        Assignment Grades:
      </h1>
      <label>
        No assignments to display
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Jest Snapshot testing suite Matches AssignmentReportsPage Snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <div>
          <label>
             Enter the course id:
            <input
              placeholder="Course Id Here"
              style="margin: 0px 1rem 0px 0px;"
              type="text"
            />
          </label>
          <label>
             Enter the assignment id:
            <input
              placeholder="Assignment Id Here"
              type="text"
            />
          </label>
        </div>
        <span />
        <div>
          <label>
             Select the report type:
            <div
              class="w-full md:w-14rem p-dropdown p-component p-inputwrapper p-inputwrapper-filled"
              data-p-disabled="false"
              data-p-focus="false"
              data-pc-name="dropdown"
              data-pc-section="root"
              data-testid="dropTest"
              id="reportTypeDropdown"
            >
              <div
                class="p-hidden-accessible"
                data-pc-section="hiddenselectedmessage"
              >
                <input
                  aria-haspopup="listbox"
                  data-pc-section="input"
                  readonly=""
                  tabindex="0"
                  type="text"
                />
              </div>
              <div
                class="p-hidden-accessible p-dropdown-hidden-select"
                data-pc-section="hiddenselectedmessage"
              >
                <select
                  aria-hidden="true"
                  data-pc-section="select"
                  tabindex="-1"
                >
                  <option
                    data-pc-section="option"
                    selected=""
                    value="pageViews"
                  >
                    pageViews
                  </option>
                </select>
              </div>
              <span
                class="p-dropdown-label p-inputtext"
                data-pc-section="input"
                tabindex="-1"
              >
                pageViews
              </span>
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Select a report"
                class="p-dropdown-trigger"
                data-pc-section="trigger"
                role="button"
              >
                <svg
                  aria-hidden="true"
                  class="p-icon p-dropdown-trigger-icon p-clickable"
                  data-pc-section="dropdownicon"
                  data-pr-overlay-visible="false"
                  fill="none"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.01744 10.398C6.91269 10.3985 6.8089 10.378 6.71215 10.3379C6.61541 10.2977 6.52766 10.2386 6.45405 10.1641L1.13907 4.84913C1.03306 4.69404 0.985221 4.5065 1.00399 4.31958C1.02276 4.13266 1.10693 3.95838 1.24166 3.82747C1.37639 3.69655 1.55301 3.61742 1.74039 3.60402C1.92777 3.59062 2.11386 3.64382 2.26584 3.75424L7.01744 8.47394L11.769 3.75424C11.9189 3.65709 12.097 3.61306 12.2748 3.62921C12.4527 3.64535 12.6199 3.72073 12.7498 3.84328C12.8797 3.96582 12.9647 4.12842 12.9912 4.30502C13.0177 4.48162 12.9841 4.662 12.8958 4.81724L7.58083 10.1322C7.50996 10.2125 7.42344 10.2775 7.32656 10.3232C7.22968 10.3689 7.12449 10.3944 7.01744 10.398Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </label>
          <label
            style="margin: 0px 0px 0px 1rem;"
          >
             Enter the report page:
            <input
              placeholder="Report Page Here"
              type="text"
            />
          </label>
        </div>
        <label>
          Current report type: 
          pageViews
        </label>
        <h1
          style="border-bottom: 1px solid black; display: inline-block;"
        >
          Assignment Analytics:
        </h1>
        <label>
          No page analytics to display
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="display: flex; flex-direction: column; align-items: center;"
    >
      <div>
        <label>
           Enter the course id:
          <input
            placeholder="Course Id Here"
            style="margin: 0px 1rem 0px 0px;"
            type="text"
          />
        </label>
        <label>
           Enter the assignment id:
          <input
            placeholder="Assignment Id Here"
            type="text"
          />
        </label>
      </div>
      <span />
      <div>
        <label>
           Select the report type:
          <div
            class="w-full md:w-14rem p-dropdown p-component p-inputwrapper p-inputwrapper-filled"
            data-p-disabled="false"
            data-p-focus="false"
            data-pc-name="dropdown"
            data-pc-section="root"
            data-testid="dropTest"
            id="reportTypeDropdown"
          >
            <div
              class="p-hidden-accessible"
              data-pc-section="hiddenselectedmessage"
            >
              <input
                aria-haspopup="listbox"
                data-pc-section="input"
                readonly=""
                tabindex="0"
                type="text"
              />
            </div>
            <div
              class="p-hidden-accessible p-dropdown-hidden-select"
              data-pc-section="hiddenselectedmessage"
            >
              <select
                aria-hidden="true"
                data-pc-section="select"
                tabindex="-1"
              >
                <option
                  data-pc-section="option"
                  selected=""
                  value="pageViews"
                >
                  pageViews
                </option>
              </select>
            </div>
            <span
              class="p-dropdown-label p-inputtext"
              data-pc-section="input"
              tabindex="-1"
            >
              pageViews
            </span>
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Select a report"
              class="p-dropdown-trigger"
              data-pc-section="trigger"
              role="button"
            >
              <svg
                aria-hidden="true"
                class="p-icon p-dropdown-trigger-icon p-clickable"
                data-pc-section="dropdownicon"
                data-pr-overlay-visible="false"
                fill="none"
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.01744 10.398C6.91269 10.3985 6.8089 10.378 6.71215 10.3379C6.61541 10.2977 6.52766 10.2386 6.45405 10.1641L1.13907 4.84913C1.03306 4.69404 0.985221 4.5065 1.00399 4.31958C1.02276 4.13266 1.10693 3.95838 1.24166 3.82747C1.37639 3.69655 1.55301 3.61742 1.74039 3.60402C1.92777 3.59062 2.11386 3.64382 2.26584 3.75424L7.01744 8.47394L11.769 3.75424C11.9189 3.65709 12.097 3.61306 12.2748 3.62921C12.4527 3.64535 12.6199 3.72073 12.7498 3.84328C12.8797 3.96582 12.9647 4.12842 12.9912 4.30502C13.0177 4.48162 12.9841 4.662 12.8958 4.81724L7.58083 10.1322C7.50996 10.2125 7.42344 10.2775 7.32656 10.3232C7.22968 10.3689 7.12449 10.3944 7.01744 10.398Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </label>
        <label
          style="margin: 0px 0px 0px 1rem;"
        >
           Enter the report page:
          <input
            placeholder="Report Page Here"
            type="text"
          />
        </label>
      </div>
      <label>
        Current report type: 
        pageViews
      </label>
      <h1
        style="border-bottom: 1px solid black; display: inline-block;"
      >
        Assignment Analytics:
      </h1>
      <label>
        No page analytics to display
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Jest Snapshot testing suite Matches CourseAssignmentPage Snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <div>
          <label>
             Enter the course id:
            <input
              placeholder="Course Id Here"
              type="text"
            />
          </label>
          <button>
            Search Course
          </button>
        </div>
        <h1
          style="border-bottom: 1px solid black; display: inline-block;"
        >
          Assignments (From Perusall):
        </h1>
        <label>
          No assignments to display
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="display: flex; flex-direction: column; align-items: center;"
    >
      <div>
        <label>
           Enter the course id:
          <input
            placeholder="Course Id Here"
            type="text"
          />
        </label>
        <button>
          Search Course
        </button>
      </div>
      <h1
        style="border-bottom: 1px solid black; display: inline-block;"
      >
        Assignments (From Perusall):
      </h1>
      <label>
        No assignments to display
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Jest Snapshot testing suite Matches DOM Snapshot 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <label>
     Enter the course id:
    <input
      onChange={[Function]}
      placeholder="Course Id Here"
      type="text"
    />
  </label>
  <button
    onClick={[Function]}
  >
    Search Course
  </button>
  <h1>
    Perusall API Course Return:
  </h1>
  <h2>
    Course Name: 
  </h2>
  <li>
    ID: 
  </li>
  <li>
    No instructor IDs available
  </li>
  <li>
    No student IDs available
  </li>
</div>
`;

exports[`Jest Snapshot testing suite Matches DOM Snapshot 2`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div>
    <label>
      Loading data
    </label>
  </div>
</div>
`;
